--- a/src/main/resources/templates/admin/category_write.html
+++ b/src/main/resources/templates/admin/category_write.html
@@ -8,7 +8,7 @@
     <title>회원목록</title>
 </head>
 <body>
-<section>
+<section class="container">
     <div><h3>카테고리 등록</h3></div>
     <form action="/admin/category_proc" method="post">
         <table>
@@ -50,7 +50,7 @@
             </tr>
             <tr>
                 <td colspan="2" style="text-align:center;">
-                    <input type="submit" class="btn" value="카테고리 저장" >
+                    <input type="submit" class="btn btn-outline-secondary btn-sm" value="카테고리 저장" >
                 </td>
             </tr>
         </table>
