--- a/src/main/resources/templates/admin/item_list.html
+++ b/src/main/resources/templates/admin/item_list.html
@@ -7,7 +7,7 @@
     <title>제품 목록</title>
 </head>
 <body>
-<section>
+<section class="container">
     <div><h3>상품 목록</h3></div>
     <table border="1">
         <tr>
