--- a/src/main/resources/templates/admin/mem_list.html
+++ b/src/main/resources/templates/admin/mem_list.html
@@ -7,7 +7,7 @@
     <title>회원 목록</title>
 </head>
 <body>
-<section>
+<section class="container">
     <div><h3>회원 목록</h3></div>
     <table border="1">
         <tr>
