--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
     <title>홈</title>
 </head>
 <body>
-<section>
+<section class="container">
     <div>
         <img src="/images/home.png" style="width: 1000px; margin: 5px auto auto auto;">
     </div>
