--- a/src/main/resources/templates/item/buy_item.html
+++ b/src/main/resources/templates/item/buy_item.html
@@ -6,7 +6,7 @@
     <title>주문 조회</title>
 </head>
 <body>
-<section>
+<section class="container">
     <div><h3>주문 조회</h3></div>
 </section>
 </body>
