--- a/src/main/resources/templates/item/mypage.html
+++ b/src/main/resources/templates/item/mypage.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div th:replace="~{inc/top}"></div>
-<section>
+<section class="container">
     <div>마이페이지</div>
     <table border="1">
         <tr>
