--- a/src/main/resources/templates/member/item_list.html
+++ b/src/main/resources/templates/member/item_list.html
@@ -7,7 +7,7 @@
     <title>상품 목록</title>
 </head>
 <body>
-<section>
+<section class="container">
     <div><h3>상품 목록</h3></div>
     <div id="item_list">
         <div th:if="${#lists.isEmpty(list.getContent())}">입력된 상품이 없습니다.</div>
