--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -4,20 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/css/login.css">
+    <link href="signin.css" rel="stylesheet">
     <title>로그인</title>
 </head>
 <body>
-<section>
+<section class="form-signin">
     <form action="/login_proc" method="post">
         <div id="login">
             <div><b>아이디</b></div>
-            <div><input type="text" name="userid"></div>
+            <div class="form-floating">
+                <input type="text" name="userid" class="form-control" style="height: 10px;" placeholder="아이디">
+            </div>
             <div><b>비밀번호</b></div>
-            <div><input type="password" name="password"></div>
+            <div class="form-floating">
+                <input type="password" name="password" class="form-control" style="height: 10px;" placeholder="비밀번호">
+            </div>
         </div>
-        <div id="loginbnt">
-            <input type="submit" value="로그인">
-        </div>
+        <button class="btn btn-outline-secondary" type="submit">Sign in</button>
     </form>
     <div id="item">
         <a href="mem_write">회원가입</a> ㅣ
