--- a/src/main/resources/templates/item/cart.html
+++ b/src/main/resources/templates/item/cart.html
@@ -7,7 +7,7 @@
     <title>장바구니</title>
 </head>
 <body>
-<section>
+<section class="container">
     <form action="/item/delivery" method="get">
     <div><h3>장바구니</h3></div>
     <div>
