--- a/src/main/resources/templates/layout/layout_admin.html
+++ b/src/main/resources/templates/layout/layout_admin.html
@@ -2,7 +2,7 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<head>
+<head th:replace="config/config_layout :: ConfigFragment">
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/css/admin_top.css">
     <title>Title</title>
