--- a/src/main/resources/templates/notice/notice_write.html
+++ b/src/main/resources/templates/notice/notice_write.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout/layout}"
+      layout:fragment="Content"  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/css/top.css">
     <link rel="stylesheet" type="text/css" href="/css/notice_write.css">
     <title>글 작성</title>
 </head>
 <body>
-<div th:replace="~{inc/top}"></div>
-<section>
+<section class="container">
     <div><h3>공지사항 작성</h3></div>
     <table>
         <tr>
@@ -35,6 +34,5 @@
         </tr>
     </table>
 </section>
-<div th:replace="~{inc/footer}"></div>
 </body>
 </html>
