--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -13,11 +13,11 @@
         <div id="login">
             <div><b>아이디</b></div>
             <div class="form-floating">
-                <input type="text" name="userid" class="form-control" style="height: 10px;" placeholder="아이디">
+                <input type="text" name="userid" class="form-control" style="height:10px; width:300px;" placeholder="아이디">
             </div>
             <div><b>비밀번호</b></div>
             <div class="form-floating">
-                <input type="password" name="password" class="form-control" style="height: 10px;" placeholder="비밀번호">
+                <input type="password" name="password" class="form-control" style="height:10px; width:300px;" placeholder="비밀번호">
             </div>
         </div>
         <button class="btn btn-outline-secondary" type="submit">Sign in</button>
