--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,5 +1,5 @@
 #login{
-    margin: 100px 300px 10px;
+    margin: 100px 400px 10px;
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
@@ -7,5 +7,5 @@
     margin: auto auto 5px;
 }
 #item{
-    margin: auto auto 100px;
+    margin: 10px auto 100px;
 }
