--- a/src/main/resources/static/css/mem_write.css
+++ b/src/main/resources/static/css/mem_write.css
@@ -43,6 +43,7 @@
     text-align: center;
 }
 .write2{
+    margin: 20px;
     display: grid;
     grid-template-columns: 150px 1fr 1fr 1fr 1fr 1fr;
 }
